# azrpc

./: CMakeLists.txt
include/azrpc/: azrpc_types.hpp  channel_builder.hpp  client_channel_builder.hpp  i_azrpc_callback.hpp  i_azrpc_channel.hpp  i_client_channel.hpp  i_looper_adapter.hpp  i_server_channel.hpp  i_service.hpp  reply.hpp  server_channel_builder.hpp
src/: CMakeLists.txt  azrpc_channel.cxx  azrpc_channel.hpp  azrpc_types.cxx  channel_builder.cxx  client_channel.cxx  client_channel.hpp  client_channel_builder.cxx  clock.cxx  clock.hpp  ev_looper_adapter.cxx  ev_looper_adapter.hpp  eventid_generator.cxx  eventid_generator.hpp  reply.cxx  server_channel.cxx  server_channel.hpp  server_channel_builder.cxx  zlooper_adapter.cxx  zlooper_adapter.hpp
src/plugin/: CMakeLists.txt  azrpc_cpp_generator.cxx  azrpc_cpp_generator.hpp  azrpc_cpp_service.cxx  azrpc_cpp_service.hpp  azrpc_plugin_main.cxx  common.hpp  cpp_helpers.cxx  cpp_helpers.hpp  file_generator.cxx  file_generator.hpp  strutil.hpp  substitute.hpp
src/proto/: azrpc.proto
test/: CMakeLists.txt  search.proto  test_common.h  test_main.cxx
